operaciones read y create con listas, usando adapter personalizado y recyclerview.

--- a/FirstApp/app/src/main/res/layout/activity_main.xml
+++ b/FirstApp/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         />
 
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_frutas"
         android:layout_width="match_parent"
         android:layout_height="200dp"
